<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oyaba Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amountTextView">Amount</string>
    <string name="amountDisplayTextView"></string>
    <string name="customPercentTextView">Custom %</string>
    <string name="percent15TextView">15%</string>
    <string name="percentCustomTextView">18%</string>
    <string name="totalTextView">Total</string>
    <string name="totalLinearLayout"/>
    <string name="total15TextView">15</string>
    <string name="totalCustomTextView">custom</string>
    <string name="tipTextView">Tip</string>
    <string name="percentCustomView">Custom %</string>
    <string name="tipCustomTextView">Custom</string>

</resources>
