<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.cfca.oyaba.TipCalculatorActivity" >
    
    <TextView
        android:id="@+id/amountTextView"
        android:layout_gravity="right"
        android:text="@string/amountTextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/amountEditText" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_gravity=""
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/text_view_padding"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/percentCustomView"
        android:layout_gravity="right"
        android:gravity="right|center_vertical"
        android:text="@string/percentCustomView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="18" />
        
    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_row="2"
        android:layout_column="1" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent15TextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
             />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentCustomTextView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        

    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/tipTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout 
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:id="@+id/tipLinearLayout" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="0dp"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/totalTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout 
        android:layout_gravity="fill_horizontal"
        android:id="@+id/totalLinearLayout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="0dp"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="@dimen/text_view_margin"
            android:padding="@dimen/text_view_padding"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="0dp"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <Space />
    
</GridLayout>
